force-app/main/default/objects/Approval_Request__c/Approval_Request__c.object-meta.xml
<CustomObject>
    <description>This object used for Approval Request record data.</description>
    <label>Approval Request</label>
    <nameField>
        <displayFormat>AR-{0000}</displayFormat>
        <label>Approval Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Approval Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>