force-app/main/default/objects/Approval_Request__c/fields/Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Approval_Date__c</fullName>
    <description>This field used for Approval Record Object.</description>
    <label>Approval Date</label>
    <type>DateTime</type>
</CustomField>