force-app/main/default/objects/Approval_Request__c/fields/Approver__c.field-meta.xml
<CustomField>
    <fullName>Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field used for Approval Record Object.</description>
    <label>Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Approval_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>