force-app/main/default/objects/Approval_Request__c/fields/Decision_Processed__c.field-meta.xml
<CustomField>
    <fullName>Decision_Processed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>this field used for an Approval Request Obj.</description>
    <label>Decision Processed</label>
    <type>Checkbox</type>
</CustomField>