force-app/main/default/objects/Approval_Request__c/fields/Deployment_Request__c.field-meta.xml
<CustomField>
    <fullName>Deployment_Request__c</fullName>
    <description>This field used for Approval Request.</description>
    <label>Deployment Request</label>
    <referenceTo>Deployment_Request__c</referenceTo>
    <relationshipLabel>Approval Requests</relationshipLabel>
    <relationshipName>Approval_Requests</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>