force-app/main/default/objects/Approval_Request__c/fields/Requested_By__c.field-meta.xml
<CustomField>
    <fullName>Requested_By__c</fullName>
    <description>This filed reference for Deployment request field request by</description>
    <formula>Deployment_Request__r.Requested_By__r.FirstName &amp; &quot; &quot; &amp; Deployment_Request__r.Requested_By__r.LastName</formula>
    <label>Requested By</label>
    <type>Text</type>
</CustomField>